--- a/Boston-House-Prediction.ipynb
+++ b/Boston-House-Prediction.ipynb
@@ -360,32 +360,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(503, 14)"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mask1 = (df.RM < 4).apply(lambda x: not x)\n",
-    "df = df[mask1]\n",
-    "\n",
-    "mask2 = (df.RM > 8.75).apply(lambda x: not x)\n",
-    "df = df[mask2]\n",
-    "\n",
-    "df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 80,
    "metadata": {},
    "outputs": [
@@ -417,8 +391,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### By looking at the correlation between MEDV and other features i.e. last column of above heatmap, we can find that RM and LSTAT are strongly correlated with MEDV."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fitting Linear Model, by keeping outliers as it is."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +418,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 5.4342561 , -0.61241174])"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lr_with_outlier = LinearRegression()\n",
+    "lr_with_outlier.fit(X_train, y_train)\n",
+    "lr_with_outlier.coef_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R2 Score =  0.4616312167137544\n"
+     ]
+    }
+   ],
+   "source": [
+    "r2score = r2_score(y_test, lr_with_outlier.predict(X_test))\n",
+    "print('R2 Score = ', r2score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Root Mean Squared Error =  6.805341174630694\n"
+     ]
+    }
+   ],
+   "source": [
+    "mse = mean_squared_error(y_test, lr_with_outlier.predict(X_test))\n",
+    "print('Root Mean Squared Error = ', mse ** 0.5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## By looking at above scatter plot between MEDV vs RM, we can find three outliers, two are at RM value less than 4 and the other one is at somewhere RM value greater than 8.\n",
+    "\n",
+    "### Let first remove two outliers, which are less than 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask1 = (df.RM < 4).apply(lambda x: not x)\n",
+    "df = df[mask1]\n",
+    "\n",
+    "X = df[['RM', 'LSTAT']]\n",
+    "y = df.MEDV\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.1, random_state = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 6.0008491 , -0.56941957])"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lr_one_outlier = LinearRegression()\n",
+    "lr_one_outlier.fit(X_train, y_train)\n",
+    "lr_one_outlier.coef_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R2 Score with one outlier =  0.6157203063157775\n",
+      "Root Mean Squared Error with one outlier =  5.624230783394955\n"
+     ]
+    }
+   ],
+   "source": [
+    "r2score = r2_score(y_test, lr_one_outlier.predict(X_test))\n",
+    "print('R2 Score with one outlier = ', r2score)\n",
+    "\n",
+    "mse = mean_squared_error(y_test, lr_one_outlier.predict(X_test))\n",
+    "print('Root Mean Squared Error with one outlier = ', mse ** 0.5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Now removing the last outlier."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask2 = (df.RM > 8.75).apply(lambda x: not x)\n",
+    "df = df[mask2]\n",
+    "\n",
+    "X = df[['RM', 'LSTAT']]\n",
+    "y = df.MEDV\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.1, random_state = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -439,51 +573,44 @@
        "array([ 5.89867087, -0.58014749])"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lr = LinearRegression()\n",
-    "lr.fit(X_train, y_train)\n",
-    "lr.coef_"
+    "lr_no_outlier = LinearRegression()\n",
+    "lr_no_outlier.fit(X_train, y_train)\n",
+    "lr_no_outlier.coef_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2 Score =  0.7230677701577137\n"
+      "R2 Score with one outlier =  0.7230677701577137\n",
+      "Root Mean Squared Error with one outlier =  4.8288331789215055\n"
      ]
     }
    ],
    "source": [
-    "r2score = r2_score(y_test, lr.predict(X_test))\n",
-    "print('R2 Score = ', r2score)"
+    "r2score = r2_score(y_test, lr_no_outlier.predict(X_test))\n",
+    "print('R2 Score with one outlier = ', r2score)\n",
+    "\n",
+    "mse = mean_squared_error(y_test, lr_no_outlier.predict(X_test))\n",
+    "print('Root Mean Squared Error with one outlier = ', mse ** 0.5)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 84,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Root Mean Squared Error =  4.8288331789215055\n"
-     ]
-    }
-   ],
    "source": [
-    "mse = mean_squared_error(y_test, lr.predict(X_test))\n",
-    "print('Root Mean Squared Error = ', mse ** 0.5)"
+    "### We can see that r2 score increased from 0.46 which is quite low to 0.72 which is quite good."
    ]
   }
  ],
