Updated  Boston-House-Prediction.ipynb

--- a/Boston-House-Prediction.ipynb
+++ b/Boston-House-Prediction.ipynb
@@ -440,38 +440,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2 Score =  0.4616312167137544\n"
+      "R2 Score with outlier =  0.7236203580746439\n",
+      "Root Mean Squared Error with outlier =  4.824013069501254\n"
      ]
     }
    ],
    "source": [
     "r2score = r2_score(y_test, lr_with_outlier.predict(X_test))\n",
-    "print('R2 Score = ', r2score)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Root Mean Squared Error =  6.805341174630694\n"
-     ]
-    }
-   ],
-   "source": [
+    "print('R2 Score with outlier = ', r2score)\n",
+    "\n",
     "mse = mean_squared_error(y_test, lr_with_outlier.predict(X_test))\n",
-    "print('Root Mean Squared Error = ', mse ** 0.5)"
+    "print('Root Mean Squared Error with outlier = ', mse ** 0.5)"
    ]
   },
   {
